devscripts (2.17.10) UNRELEASED; urgency=medium

  [ Mattia Rizzolo ]
  * debian/tests/control:
    + Add dependency on debhelper; apparently autopkgtest in ubuntu doesn't
      pull it otherwise

  [ Antonio Terceiro ]
  * debc:
    + add --list-changes option, similar to --list-debs but for displaying the
      path to the .changes file.

 -- Mattia Rizzolo <mattia@debian.org>  Tue, 25 Jul 2017 14:18:24 +0200

devscripts (2.17.9) unstable; urgency=medium

  [ Adam D. Barratt ]
  * transition-check:
    + fix URL of source data.  Closes: #868072

  [ Mattia Rizzolo ]
  * debrepro:
    + support skipping the 'time' variation.
  * debchange:
    + Fix test failure when building in Ubuntu.

  [ Ximin Luo ]
  * debdiff-apply:
    + Actually install the script, by adding it to setup.py.  Closes: #868260

  [ gregor herrmann ]
  * uscan:
    + Ensure uscan doesn't try to contact local proxies in tests.

 -- James McCoy <jamessan@debian.org>  Wed, 19 Jul 2017 20:29:27 -0400

devscripts (2.17.8) unstable; urgency=medium

  [ Ximin Luo ]
  * Rename debpatch to debdiff-apply. (Closes: #867738, #867743)

 -- James McCoy <jamessan@debian.org>  Mon, 10 Jul 2017 23:36:09 -0400

devscripts (2.17.7) unstable; urgency=medium

  [ Paul Wise ]
  * Switch from /org to /srv in paths on debian.org servers

  [ Mattia Rizzolo ]
  * debchange:
    + Target stretch-backports with --bpo.  Closes: #867662
    + Support $codename{,-{proposed-updates,security}} as well. Closes: #789587
  * bts:
    + Add patch from Samuel Thibault <sthibault@debian.org> to add support for
      the new 'a11y' tag.  Closes: #867416

  [ Hilko Bengen ]
  * debchange:
    + Replace dpkg call with Dpkg::Version::compare_version  (Closes: #854366)

  [ Cyril Brulebois ]
  * debsnap:
    + parse the dsc file when downloading source packages.  (Closes: #862668)

  [ Ximin Luo ]
  * debpatch:
    + New script, Apply a debdiff to a Debian source package. (Closes: #845659)

  [ Antonio Terceiro ]
  * debrepro: