@@ -2,7 +2,7 @@ GEN_MAN1S := bts.1 build-rdeps.1 chdist.1 dcontrol.1 debcheckout.1 debcommit.1 \
 	     deb-reversion.1 desktop2menu.1 dget.1 mass-bug.1 \
 	     mk-build-deps.1 mk-origtargz.1 namecheck.1 rmadison.1 sadt.1 svnpath.1 \
 	     tagpending.1 origtargz.1 transition-check.1 who-permits-upload.1 \
-	     git-deborig.1
+	     git-deborig.1 hardening-check.1
 
 PREFIX = /usr
 BINDIR = $(PREFIX)/bin
