@@ -188,6 +188,8 @@ And now, in mostly alphabetical order, the scripts:
 - grep-excuses: grep britney's excuses to find out what is happening to your
   packages. [libterm-size-perl, libyaml-syck-perl, wget, w3m]
 
+- hardening-check: report the hardening characteristics of a set of binaries.
+
 - list-unreleased: searches for packages marked UNRELEASED in their
   changelog
 
