@@ -114,8 +114,8 @@ Suggests: adequate,
           svn-buildpackage,
           w3m,
           ${vendor:Suggests}
-Breaks: ubuntu-dev-tools (<< 0.147~)
-Replaces: ubuntu-dev-tools (<< 0.124~)
+Breaks: ubuntu-dev-tools (<< 0.147~), hardening-includes
+Replaces: ubuntu-dev-tools (<< 0.124~), hardening-includes
 Description: scripts to make the life of a Debian Package maintainer easier
  Contains the following scripts, dependencies/recommendations shown in
  brackets afterwards:
@@ -195,6 +195,7 @@ Description: scripts to make the life of a Debian Package maintainer easier
     [libdpkg-perl, libgit-wrapper-perl, liblist-compare-perl]
   - grep-excuses: grep britney's excuses for your packages [libterm-size-perl,
     libyaml-syck-perl, wget, w3m]
+  - hardening-check: report the hardening characteristics of a set of binaries
   - list-unreleased: search for unreleased packages
   - manpage-alert: locate binaries without corresponding manpages [man-db]
   - mass-bug: mass-file bug reports [bsd-mailx | mailx]
