@@ -88,6 +88,8 @@
 	$lang:$lang/git-deborig.$lang.pl add_$lang:?add_$lang/translator_pod.add
 [type:man] ../scripts/grep-excuses.1 \
 	$lang:$lang/grep-excuses.$lang.1 add_$lang:?add_$lang/translator_man.add
+[type:pod] ../scripts/hardening-check.pl \
+	$lang:$lang/hardening-check.$lang.pl add_$lang:?add_$lang/translator_pod.add
 [type:man] ../scripts/list-unreleased.1 \
 	$lang:$lang/list-unreleased.$lang.1 add_$lang:?add_$lang/translator_man.add
 [type:man] ../scripts/manpage-alert.1 \
