@@ -10,6 +10,9 @@ devscripts (2.17.10) UNRELEASED; urgency=medium
     + add --list-changes option, similar to --list-debs but for displaying the
       path to the .changes file.
 
+  [ James McCoy ]
+  * Add hardening-check script.
+
  -- Mattia Rizzolo <mattia@debian.org>  Tue, 25 Jul 2017 14:18:24 +0200
 
 devscripts (2.17.9) unstable; urgency=medium
